--- a/ProfilePort/app/message/partials/message.html
+++ b/ProfilePort/app/message/partials/message.html
@@ -2,9 +2,8 @@
 <div class="row" style="margin-top: -5px; margin-bottom: 5px;">
     <div class="col-xs-12">
         <div class="btn-group pull-left">
-            <button type="button" class="btn btn-primary" ng-click="model.saveNotes()"><i class="fa fa-save"></i> Save</button>
-            <button type="button"class="btn btn-success" ng-click="model.confirm()"><i class="fa fa-backward"></i> Back</button>
-
+            <button type="button" class="btn btn-primary" ng-click="model.postMessages()"><i class="fa fa-save"></i> Save</button>
+            <!--<button type="button"class="btn btn-success" ng-click="model.confirm()"><i class="fa fa-backward"></i> Back</button>-->
         </div>
     </div>
 </div>
