--- a/ClientPort/App/notes/partials/notes.html
+++ b/ClientPort/App/notes/partials/notes.html
@@ -11,24 +11,8 @@
 
                     <div class="form-group">
                      
-                        <div class="col-sm-7" >
-                            <table style="width:300px" ng-repeat="note in notes">
-                                <thead>
-                                    <tr>
-                                        <th>{{note.Title}}</th>
-                                                                            </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td>{{note.NoteContent}}</td>
-                                       
-                                    </tr>
-                                    
-                                <tbody>
-
-
-</table>
-       
+                        <div class="col-sm-7" ng-repeat="note in notes">
+                            <p style="width:300px" ng-click="getNote(note.id)">{{note.Title}}</p>
                         </div>
 
                 </div>
