--- a/ClientPort/App/Home/partials/home.html
+++ b/ClientPort/App/Home/partials/home.html
@@ -44,48 +44,202 @@
     </div><!-- /.navbar-collapse -->
 </nav>
 
-<div style="padding-bottom:30px">
-<div class="row">
-    <div class="col-md-4">
-        <div class="well" style="min-height: 300px">
-            <div class="well" style="min-height: 300px">
-                <div class="bc-widget">
-                    <div class="title">My Connections</div>
-                    <div class="content">
 
-                        <a class="btn btn-lg btn-primary" ng-href="#/profile/{{$scope.DashboardId}}"><i class="fa fa-archive fa-arrows-h"></i>&nbsp; My Profile</a>
+<div class="form-horizontal" novalidate name="form" role="form">
+    <div class="bc-widget">
+        <div class="row">
+            <div class="col-md-3">
+                <div class="well" style="min-height: 250px">
+                    <!--<div class="well" style="min-height: 300px">-->
+                    <div class="bc-widget">
+                        <div class="title">My Connections</div>
+                        <div class="content">
+
+
+                        </div>
+
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
-    <div class="col-md-4">
-        <div class="well" style="min-height: 300px">
-            <div class="well" style="min-height: 300px">
-                <div class="bc-widget">
-                    <div class="title">My Cnnections</div>
-                    <div class="content">
+            <div class="col-md-7">
+                <div class="well" style="min-height: 100px">
+                    <div class="form-horizontal">
 
-                        <a class="btn btn-lg btn-primary" ng-href="#/connnections/{{$scope.DashboardId}}"><i class="fa fa-archive fa-arrows-h"></i>&nbsp; My Profile</a>
+                        <div class="row">
+
+                            <div class="col-md-8">
+                                <div class="form-group">
+
+                                    <div class="col-md-12">
+                                        <textarea class="form-control" type="text" placeholder="Update your voice" />
+                                    </div>
+
+                                </div>
+                            </div>
+
+                            <div class="col-md-4">
+                                <div class="form-group">
+
+                                    <div class="col-md-12">
+                                        <textarea class="form-control" type="text" placeholder="Update your voice" />
+                                    </div>
+
+                                </div>
+                            </div>
+
+                        </div>
+
+                    </div>
+
+                </div>
+                <div class="well">
+                    <div class="form-horizontal">
+
+                        <div class="row">
+
+                            <div class="col-md-4">
+                                <div class="form-group">
+
+                                    <div class="col-md-12">
+                                        PHOTO
+                                    </div>
+
+                                </div>
+
+                            </div>
+
+                            <div class="col-md-8">
+                                <!-- Large button group -->
+
+                                <div class="input-group">
+                                    <span class="input-group-btn">
+                                        <button class="btn btn-default" type="button">My Pals</button>
+                                    </span>
+                                    <input type="text" class="form-control" placeholder="Search My Pals...">
+                                </div>
+                                <div class="input-group">
+                                    <span class="input-group-btn">
+                                        <button class="btn btn-default" type="button">My Pals</button>
+                                    </span>
+                                    <input type="text" class="form-control" placeholder="Search My Pals...">
+                                </div>
+                            </div>
+
+                        </div>
+
                     </div>
                 </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-md-4">
-        <div class="well" style="min-height: 300px">
-            <div class="well" style="min-height: 300px">
-                <div class="bc-widget">
-                    <div class="title">My Connections</div>
-                    <div class="content">
+                <div class="col-md-2">
+                    <div class="well" style="min-height: 250px">
+                        <div class="form-horizontal">
 
-                        <a class="btn btn-lg btn-primary" ng-href="#/messaage/{{$scope.DashboardId}}"><i class="fa fa-magic fa-arrows-h"></i>&nbsp; Messages <span class="badge">9</span></a>
+                            <div class="row">
+                                <div class="bc-widget">
+                                    <div class="col-md-8">
+                                        <div class="form-group">
+
+                                            <div class="col-md-12">
+                                                <textarea class="form-control" type="text" placeholder="Update your voice" />
+                                            </div>
+
+                                        </div>
+                                    </div>
+
+                                    <div class="col-md-4">
+                                        <div class="form-group">
+
+                                            <div class="col-md-12">
+                                                <textarea class="form-control" type="text" placeholder="Update your voice" />
+                                            </div>
+
+                                        </div>
+                                    </div>
+
+
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="form-horizontal">
+
+                            <div class="row">
+                                <div class="bc-widget">
+                                    <div class="col-md-4">
+                                        <div class="form-group">
+
+                                            <div class="col-md-12">
+                                                <textarea class="form-control" type="text" placeholder="Update your voice" />
+                                            </div>
+
+                                        </div>
+                                    </div>
+
+                                    <div class="col-md-4">
+                                        <div class="form-group">
+
+                                            <div class="col-md-12">
+                                                <textarea class="form-control" type="text" placeholder="Update your voice" />
+                                            </div>
+
+                                        </div>
+                                    </div>
+
+                                    <div class="col-md-4">
+                                        <div class="form-group">
+
+                                            <div class="col-md-12">
+                                                <textarea class="form-control" type="text" placeholder="Update your voice" />
+                                            </div>
+
+                                        </div>
+                                    </div>
+
+
+                                </div>
+                            </div>
+
+                        </div>
                     </div>
+
                 </div>
+
+
             </div>
         </div>
-    </div>
-</div>
+     
+    </div></div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <div class="row">
     <div class="col-md-6">
         <div class="well" style="min-height: 300px">
@@ -106,7 +260,7 @@
                 <div class="content">
                     <input type="radio" ng-model="value" value="firstValue" ng-change='newValue(value)'>
                     <input type="radio" ng-model="value" value="secondValue" ng-change='newValue(value)'>
-                    
+
 
                     <a class="btn btn-lg btn-primary" ng-href="#/note/{{$scope.DashboardId}}"><i class="fa fa-newspaper-o"></i>&nbsp; Notes</a>
                 </div>
@@ -121,6 +275,5 @@
 
             </div>
         </div>
-    </div>
     </div>
 </div>
