--- a/ClientPort/App/Home/partials/home.html
+++ b/ClientPort/App/Home/partials/home.html
@@ -48,30 +48,30 @@
 <div class="form-horizontal" novalidate name="form" role="form">
     <div class="bc-widget">
         <div class="row">
-            <div class="col-md-3">
-                <div class="well" style="min-height: 250px">
-                    <!--<div class="well" style="min-height: 300px">-->
-                    <div class="bc-widget">
-                        <div class="title">My Connections</div>
-                        <div class="content">
 
-
+            <div class="col-md-5">
+              
+                <div class="well" style="min-height: 285px">
+               <span class="fa-3x fa fa-volume-up fa-spinner" >
+                        </span>
+                        <div class="bc-widget">
+                            <div class="title">Recent Buzz</div>
+                            
                         </div>
-
                     </div>
-                </div>
             </div>
             <div class="col-md-7">
-                <div class="well" style="min-height: 100px">
+                <div class="well">
                     <div class="form-horizontal">
 
                         <div class="row">
 
                             <div class="col-md-8">
                                 <div class="form-group">
-
+                                    
                                     <div class="col-md-12">
-                                        <textarea class="form-control" type="text" placeholder="Update your voice" />
+                               
+                                            <textarea class="form-control" type="text" placeholder="Update Your Voice. Make Ur Voice Heard" />
                                     </div>
 
                                 </div>
@@ -108,106 +108,145 @@
 
                             </div>
 
+
                             <div class="col-md-8">
-                                <!-- Large button group -->
 
-                                <div class="input-group">
-                                    <span class="input-group-btn">
-                                        <button class="btn btn-default" type="button">My Pals</button>
-                                    </span>
-                                    <input type="text" class="form-control" placeholder="Search My Pals...">
-                                </div>
-                                <div class="input-group">
-                                    <span class="input-group-btn">
-                                        <button class="btn btn-default" type="button">My Pals</button>
-                                    </span>
-                                    <input type="text" class="form-control" placeholder="Search My Pals...">
-                                </div>
+                                <form class="form">
+                                    <div class="form-group">
+                                        <div class="input-group">
+                                            <div class="input-group-addon fa fa-search"></div>
+                                            <input type="text" class="form-control" id="search" placeholder="Name, Phone, Location">
+                                            <div class="input-group-addon btn btn-link">Search</div>
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group">
+                                        
+                                        <!-- Single button -->
+                                        <div class="btn-group">
+                                            
+                                            <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                Online <span class="fa fa-long-arrow-down"></span>
+                                            </button>
+                                            <ul class="dropdown-menu">
+                                                <li><a href="#">Contact1</a></li>
+                                                <li><a href="#">Contact2</a></li>
+                                                <li role="separator" class="divider"></li>
+                                                <li><a href="#">Separated link</a></li>
+                                            </ul>
+                                        </div>
+                                        
+                                        <div class="btn-group">
+                                            <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                All <span class="caret"></span>
+                                            </button>
+                                            <ul class="dropdown-menu">
+                                                <li><a href="#">Contact1</a></li>
+                                                <li><a href="#">Contact2</a></li>
+                                                <li role="separator" class="divider"></li>
+                                                <li><a href="#">Separated link</a></li>
+                                            </ul>
+                                        </div>
+                                        <div class="btn-group">
+                                            <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                Best <span class="caret"></span>
+                                            </button>
+                                            <ul class="dropdown-menu">
+                                                <li><a href="#">Contact1</a></li>
+                                                <li><a href="#">Contact2</a></li>
+                                                <li role="separator" class="divider"></li>
+                                                <li><a href="#">Separated link</a></li>
+                                            </ul>
+                                        </div>
+                                    
+                                    
+                                    </div>
+
+</form>
                             </div>
-
-                        </div>
-
-                    </div>
-                </div>
-                <div class="col-md-2">
-                    <div class="well" style="min-height: 250px">
-                        <div class="form-horizontal">
-
-                            <div class="row">
-                                <div class="bc-widget">
-                                    <div class="col-md-8">
-                                        <div class="form-group">
-
-                                            <div class="col-md-12">
-                                                <textarea class="form-control" type="text" placeholder="Update your voice" />
-                                            </div>
-
-                                        </div>
-                                    </div>
-
-                                    <div class="col-md-4">
-                                        <div class="form-group">
-
-                                            <div class="col-md-12">
-                                                <textarea class="form-control" type="text" placeholder="Update your voice" />
-                                            </div>
-
-                                        </div>
-                                    </div>
-
-
-                                </div>
-                            </div>
-
-                        </div>
-                        <div class="form-horizontal">
-
-                            <div class="row">
-                                <div class="bc-widget">
-                                    <div class="col-md-4">
-                                        <div class="form-group">
-
-                                            <div class="col-md-12">
-                                                <textarea class="form-control" type="text" placeholder="Update your voice" />
-                                            </div>
-
-                                        </div>
-                                    </div>
-
-                                    <div class="col-md-4">
-                                        <div class="form-group">
-
-                                            <div class="col-md-12">
-                                                <textarea class="form-control" type="text" placeholder="Update your voice" />
-                                            </div>
-
-                                        </div>
-                                    </div>
-
-                                    <div class="col-md-4">
-                                        <div class="form-group">
-
-                                            <div class="col-md-12">
-                                                <textarea class="form-control" type="text" placeholder="Update your voice" />
-                                            </div>
-
-                                        </div>
-                                    </div>
-
-
-                                </div>
-                            </div>
-
                         </div>
                     </div>
 
                 </div>
-
+            </div>
+            <div class="col-md-2">
 
             </div>
+
         </div>
-     
-    </div></div>
+    </div>
+    <div class="well" style="min-height: 250px">
+        <div class="form-horizontal">
+
+            <div class="row">
+                <div class="bc-widget">
+                    <div class="col-md-8">
+                        <div class="form-group">
+
+                            <div class="col-md-12">
+                                <textarea class="form-control" type="text" placeholder="Update your voice" />
+                            </div>
+
+                        </div>
+                    </div>
+
+                    <div class="col-md-4">
+                        <div class="form-group">
+
+                            <div class="col-md-12">
+                                <textarea class="form-control" type="text" placeholder="Update your voice" />
+                            </div>
+
+                        </div>
+                    </div>
+
+
+                </div>
+            </div>
+
+        </div>
+        <div class="form-horizontal">
+
+            <div class="row">
+                <div class="bc-widget">
+                    <div class="col-md-4">
+                        <div class="form-group">
+
+                            <div class="col-md-12">
+                                <textarea class="form-control" type="text" placeholder="Update your voice" />
+                            </div>
+
+                        </div>
+                    </div>
+
+                    <div class="col-md-4">
+                        <div class="form-group">
+
+                            <div class="col-md-12">
+                                <textarea class="form-control" type="text" placeholder="Update your voice" />
+                            </div>
+
+                        </div>
+                    </div>
+
+                    <div class="col-md-4">
+                        <div class="form-group">
+
+                            <div class="col-md-12">
+                                <textarea class="form-control" type="text" placeholder="Update your voice" />
+                            </div>
+
+                        </div>
+                    </div>
+
+
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+</div>
 
 
 
