--- a/ClientPort/App/Home/partials/home.html
+++ b/ClientPort/App/Home/partials/home.html
@@ -148,7 +148,7 @@
 
                                                     <div class="input-group">
 
-                                                        <a class="form-control btn btn-xs btn-primary" ng-href="#/profile/{{$scope.DashboardId}}"><i class="fa fa-newspaper-o fa-file-archive-o"></i>&nbsp; Notes</a>
+                                                        <a class="form-control btn btn-xs btn-primary" ng-href="#/profile/{{$scope.DashboardId}}"><i class="fa fa-newspaper-o "></i>&nbsp; Notes</a>
                                                         <span class="input-group-addon fa fa-plus-circle"></span>
                                                     </div>
 
