--- a/ClientPort/App/Profile/Partials/Profile.html
+++ b/ClientPort/App/Profile/Partials/Profile.html
@@ -38,7 +38,7 @@
                             <div class="panel panel-default">
                                  <div id="collapseOne" class="panel-collapse collapse in">
                                     <div class="panel-body">
-                                        <p>Notes <a ng-href="#/note/{{$scope.DashboardId}}" target=" _blank">Click Here</a></p>
+                                        <p>Notes <a ng-href="#/note/{{$scope.DashboardId}}">Click Here</a></p>
                                     </div>
                                 </div>
                             </div>
